--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,8 +18,8 @@
   </header>
   <!-- This section should be hidden by default and shown when there are todos -->
   <section class="main">
-    <input  type="button" (click)="allChecked()">
-    <label for="toggle-all">Mark all as complete</label>
+    <input class="toggle-all" >
+    <label for="toggle-all" (click)="allChecked()">Mark all as complete</label>
     <ul class="todo-list">
       <!-- These are here just to show the structure of the list items -->
       <!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
